@startuml
class Car{
    - String wheel
    - String oilBox
    - String body
    + String getWheel()
    + String getOilBox()
    + String getBody()
    + String setWheel()
    + String setOilBox()
    + String setBody()
    + String toString()
}

interface Builder{
    void buildWheel()
    void buildOilBox()
    void buildBody()
    Car getCar()
}

class BMWBuilder implements Builder{
    +void buildWheel()
    +void buildOilBox()
    +void buildBody()
    +Car getCar()
}

class BenZBuilder implements Builder{
    +void buildWheel()
    +void buildOilBox()
    +void buildBody()
    +Car getCar()
}

class Director {
    - Builder builder
    + Director(Builder builder)
    + Car construct(String body,String oilBox,String wheel)
}

Director o-- Builder
BMWBuilder ..>Car
BenZBuilder ..>Car
Director ..>Car


@enduml